hide content on none active sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bootstrap 5</title>
+  <title> Amanda Maarman</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/my-styles.css">
   <link rel="stylesheet" href="css/header-styles.css">
@@ -75,41 +75,14 @@
 
     <div id="batch_more_content">
       <div id="home_content"><p>LANDING PAGE</p>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <h4>html</h4>
-              <a href="https://amandam2017.github.io/basic-webpage/" target="_blank">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                  alt="Generic placeholder image" width="100%" height="250">
-              </a>
-              <p>The page is made up of html and css</p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>grid system</h4>
-              <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                  alt="Generic placeholder image" width="100%" height="250">
-              </a>
-              <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>css</h4>
-              <a href="#">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                  alt="Generic placeholder image" width="100%" height="250">
-              </a>
-              <p>The page is made up of html and css</p>
-            </div><!-- /.col-lg-4 -->
-          </div>
-        </div>
+        
       </div>
 
-      <div id="batch_control_content" class="none"><p>these are the projects that I have created so far</p>
+      <div id="batch_control_content" class="none"><h2>FED PROJECTS</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <h4>BASIC WEB PAGE</h4>
+              <h4>Basic Web Page</h4>
               <a href="https://amandam2017.github.io/basic-webpage/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -117,7 +90,7 @@
               <p>The page is made up of html and css</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>BOOT-CAMP UNIT TESTING</h4>
+              <h4>Unit Tesing</h4>
               <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -125,38 +98,36 @@
               <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>BASIC WEB PAGE</h4>
-              <a href="#">
+              <h4>Dom Widgets with Function</h4>
+              <a href="https://amandam2017.github.io/dom-intro/">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
-              <p>The page is made up of html and css</p>
+              <p>Make widgets to work with JS functions</p>
             </div><!-- /.col-lg-4 -->
           </div>
         </div>
-      </div>
-      <div id="batch_declaration_content" class="none">Batch déclaration
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <h4>BASIC WEB PAGE</h4>
-              <a href="#">
+              <h4>Dom Widgets with Function and FF</h4>
+              <a href="https://amandam2017.github.io/dom-intro/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
-              <p>The page is made up of html and css</p>
+              <p>Made the dom widgets to work with both function and factory functions</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>BASIC WEB PAGE</h4>
-              <a href="#">
+              <h4>Unit Tesing</h4>
+              <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
-              <p>The page is made up of html and css</p>
+              <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>BASIC WEB PAGE</h4>
-              <a href="#">
+              <h4>Dom Widgets</h4>
+              <a href="https://amandam2017.github.io/dom-intro/">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
@@ -165,13 +136,54 @@
           </div>
         </div>
       </div>
-      <div id="batch_download_content" class="none">
-        <p>I am a motivated young person looking for an environment to gain confidence and experience using
-          my potential in the field of web development, while continuing to learn and expand my knowledge of
-          coding. I am passionate about creativity and learning new things that would explore my coding skills
-          as a developer.</p>
       </div>
-      <div id="batch_treatment_content" class="none">Batch de traitement</div>
+      <div id="batch_declaration_content" class="none"><h2>BED PROJECTS</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <h4>PROJECT LOADING</h4>
+              <a href="#">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                  alt="Generic placeholder image" width="100%" height="250">
+              </a>
+              <!-- <p>The page is made up of html and css</p> -->
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+              <h4>PROJECT LOADING</h4>
+              <a href="#">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                  alt="Generic placeholder image" width="100%" height="250">
+              </a>
+              <!-- <p>The page is made up of html and css</p> -->
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+              <h4>PROJECT LOADING</h4>
+              <a href="#">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                  alt="Generic placeholder image" width="100%" height="250">
+              </a>
+              <!-- <p>The page is made up of html and css</p> -->
+            </div><!-- /.col-lg-4 -->
+          </div>
+        </div>
+      </div>
+      <div id="batch_download_content" class="none"><h2>ABOUT</h2>
+        <div class="container">
+          <div class="row">
+            <p>I am a motivated young person looking for an environment to gain confidence and experience using
+              my potential in the field of web development, while continuing to learn and expand my knowledge of
+              coding. I am passionate about creativity and learning new things that would explore my coding skills
+              as a developer.</p>
+          </div>
+        </div>
+      </div>
+      <div id="batch_treatment_content" class="none">
+        <div class="container">
+          <div class="row">
+            <h2>I design and make web pages</h2>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script> -->
