--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
         </div>
       </div>
     </div>
+    <!-- <div class="row">
+      <div class="footer">
+          <p>Copyright amandamaarman@2021</p>
+      </div>
+  </div> -->
   </div>
   <!-- <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script> -->
   <!-- <script src="js/bootstrap.min.js"></script> -->
