--- a/resume/index.html
+++ b/resume/index.html
@@ -49,7 +49,8 @@
                     </div>
                     <p class="lead mb-5">I am an agile web-developer graduate looking for opportunity to grow and expand my coding skills while I contribute the skills that I currently have.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="www.linkedin.com/in/amanda-maarman-27309886
+                        "><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
