--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Amanda Maarman</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="css/hover.css" rel="stylesheet" media="all">
   <link rel="stylesheet" href="css/my-styles.css">
   <link rel="stylesheet" href="css/header-styles.css">
-
-
 </head>
 
 <body>
@@ -24,22 +23,25 @@
         aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <!-- <div class="carousel-item active">
+      <div class="carousel-item active">
         <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                  alt="First slide" width="100%" height="500">        
-      </div> -->
-      <div class="row header_section">
-        <div class="clearfix header_section-wrapper center">
-            <div class="col-6 header_section--heading">
-                <h1>AMANDA</h1>
-                <h1>MAARMAN</h1>
-                <p>Agie Web Developer</p>
-            </div>
-            <div class="col-6 header_section--image">
-                <img src="images/tablemountain-background.jpg" alt="tablemountain">
-            </div>
-        </div>
-    </div>
+                  alt="First slide" width="100%" height="500"> 
+                  <div class="header_section">
+                    <div class="container inner_container center">
+                        <div class="row">
+                          <div class="col-lg-6 header_section--image">
+                            <img src="images/tablemountain-background.jpg" alt="tablemountain">
+                        </div>
+                          <div class="col-lg-6 header_section--heading">
+                            <h1>AMANDA</h1>
+                            <h1>MAARMAN</h1>
+                            <p>Agie Web Developer</p>
+                        </div>
+                        </div>
+                    </div>
+                </div>       
+      </div>
+      
       <div class="carousel-item">
         <img src="images/castle-1.png" class="d-block w-100" alt="slide2">
         <div class="carousel-caption d-none d-md-block">
@@ -67,10 +69,11 @@
   <div id="main_content">
     <div class="breadcrumbs">
       <a href="#" id="home" class="active">Home</a>
-      <a href="#" id="batch_control">Front End Projetcs</a>
-      <a href="#" id="batch_declaration">Back End Projects</a>
-      <a href="#" id="batch_download">About Me</a>
-      <a href="#" id="batch_treatment">Service</a>
+      <a href="#" id="fed_proj">Front End Projetcs</a>
+      <a href="#" id="bed_proj">Back End Projects</a>
+      <a href="#" id="aboutMe">About Me</a>
+      <a href="#" id="service">Service</a>
+      <a href="resume/index.html" id="resume" target="_blank">Download Resume</a>
     </div>
 
     <div id="batch_more_content">
@@ -78,27 +81,27 @@
         
       </div>
 
-      <div id="batch_control_content" class="none"><h2>FED PROJECTS</h2>
+      <div id="fed_proj_content" class="none"><h2>FED PROJECTS</h2>
         <div class="container">
           <div class="row">
-            <div class="col-lg-4">
-              <h4>Basic Web Page</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Basic Web Page</h2>
               <a href="https://amandam2017.github.io/basic-webpage/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
               <p>The page is made up of html and css</p>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>Unit Tesing</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Test Driven Development</h2>
               <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
               <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>Dom Widgets with Function</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Dom Widgets with Function</h2>
               <a href="https://amandam2017.github.io/dom-intro/">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -109,24 +112,24 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-lg-4">
-              <h4>Dom Widgets with Function and FF</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Dom Widgets with Function and FF</h2>
               <a href="https://amandam2017.github.io/dom-intro/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
               <p>Made the dom widgets to work with both function and factory functions</p>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>Unit Tesing</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Unit Tesing</h2>
               <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
               <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
             </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-              <h4>Dom Widgets</h4>
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Dom Widgets</h2>
               <a href="https://amandam2017.github.io/dom-intro/">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -137,11 +140,11 @@
         </div>
       </div>
       </div>
-      <div id="batch_declaration_content" class="none"><h2>BED PROJECTS</h2>
+      <div id="bed_proj_content" class="none"><h2>BED PROJECTS</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <h4>PROJECT LOADING</h4>
+              <h2>PROJECT LOADING</h2>
               <a href="#">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -149,7 +152,7 @@
               <!-- <p>The page is made up of html and css</p> -->
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>PROJECT LOADING</h4>
+              <h2>PROJECT LOADING</h2>
               <a href="#">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -157,7 +160,7 @@
               <!-- <p>The page is made up of html and css</p> -->
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <h4>PROJECT LOADING</h4>
+              <h2>PROJECT LOADING</h2>
               <a href="#">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
@@ -167,7 +170,7 @@
           </div>
         </div>
       </div>
-      <div id="batch_download_content" class="none"><h2>ABOUT</h2>
+      <div id="aboutMe_content" class="none"><h2>ABOUT</h2>
         <div class="container">
           <div class="row">
             <p>I am a motivated young person looking for an environment to gain confidence and experience using
@@ -177,7 +180,7 @@
           </div>
         </div>
       </div>
-      <div id="batch_treatment_content" class="none">
+      <div id="service_content" class="none">
         <div class="container">
           <div class="row">
             <h2>I design and make web pages</h2>
@@ -185,14 +188,14 @@
         </div>
       </div>
     </div>
-    <!-- <div class="row">
-      <div class="footer">
+    <div class="footer">
+      <div class="footer-container">
           <p>Copyright amandamaarman@2021</p>
       </div>
-  </div> -->
   </div>
-  <!-- <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script> -->
-  <!-- <script src="js/bootstrap.min.js"></script> -->
+  </div>
+  <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/menu.js"></script>
 
 </body>
