--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link href="css/hover.css" rel="stylesheet" media="all">
   <link rel="stylesheet" href="css/my-styles.css">
   <link rel="stylesheet" href="css/header-styles.css">
+
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,39 +33,52 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                  alt="First slide" width="100%" height="500"> 
+        <!-- <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                  alt="First slide" width="100%" height="500">  -->
                   <div class="header_section">
                     <div class="container inner_container center">
                         <div class="row">
                           <div class="col-lg-6 header_section--image">
-                            <img src="images/tablemountain-background.jpg" alt="tablemountain">
+                            <img src="images/me.png" alt="tablemountain">
                         </div>
-                          <div class="col-lg-6 header_section--heading">
+                        <div class="col-lg-6">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide Label</h5>
+                                <p>Agile Web Developer</p>
+                              </div>
+                        </div>
+                          <!-- <div class="col-lg-6 header_section--heading">
                             <h1>AMANDA</h1>
                             <h1>MAARMAN</h1>
                             <p>Agie Web Developer</p>
-                        </div>
+                        </div> -->
                         </div>
                     </div>
                 </div>       
       </div>
       
       <div class="carousel-item">
-        <img src="images/castle-1.png" class="d-block w-100" alt="slide2">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+        <!-- <img src="images/castle-1.png" class="d-block w-100" alt="slide2" width="100%" height="250px"> -->
+        <div class="header_section">
+          <!-- <div class="container inner_container center"> -->
+              <!-- <div class="row"> -->
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Agile Web Developer</p>
+              <!-- </div> -->
+          <!-- </div> -->
         </div>
+      </div>
       </div>
       <div class="carousel-item">
-        <img src="images/district-six-museum.jpg" class="d-block w-100" alt="slide3">
+        <!-- <img src="images/district-six-museum.jpg" class="d-block w-100" alt="slide3" width="100%" height="250px"> -->
+        <div class="header_section">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <p>Agile Web Developer</p>
         </div>
       </div>
-    </div>
+      </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -66,6 +88,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  </div>
   <div id="main_content">
     <div class="breadcrumbs">
       <a href="#" id="home" class="active">Home</a>
@@ -73,11 +96,174 @@
       <a href="#" id="bed_proj">Back End Projects</a>
       <a href="#" id="aboutMe">About Me</a>
       <a href="#" id="service">Service</a>
-      <a href="resume/index.html" id="resume" target="_blank">Download Resume</a>
+      <a href="pdf/Amanda Maarman - 2020 CV.docx" id="resume" target="_blank">Download Resume</a>
     </div>
 
     <div id="batch_more_content">
-      <div id="home_content"><p>LANDING PAGE</p>
+      <div id="home_content">
+          <div id="page-top">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                    <span class="d-block d-lg-none">amanda maarman</span>
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/tablemountain-background.jpg" alt="" /></span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- Page Content-->
+            <div class="container-fluid p-0">
+                <!-- About-->
+                <section class="resume-section" id="about">
+                    <div class="resume-section-content">
+                        <h1 class="mb-0">
+                            Amanda
+                            <span>Maarman</span>
+                        </h1>
+                        <div class="subheading mb-5">
+                            327 Watergang · Kayamandi, STELLENBOSCH 7600 · (078) 849-1091 ·
+                            <a href="mailto:name@email.com">amanda.maarman12@gmail.com</a>
+                        </div>
+                        <p class="lead mb-5">I am an agile web-developer graduate looking for opportunity to grow and expand my coding skills while I contribute the skills that I currently have.</p>
+                        <div class="social-icons">
+                            <a class="social-icon" href="www.linkedin.com/in/amanda-maarman-27309886
+                            "><i class="fab fa-linkedin-in"></i></a>
+                            <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                            <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        </div>
+                    </div>
+                </section>
+                <hr class="m-0" />
+                <!-- Experience-->
+                <section class="resume-section" id="experience">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Experience</h2>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">FED Web Developer Intern to Junior FED Web Developer</h4>
+                                <div class="subheading mb-3">Milk Digital Agency</div>
+                                <p>Site maintanance, updating content to the live site, developing wordpress site</p>
+                            </div>
+                            <div class="flex-shrink-0"><span>July 2018 - March 2019</span></div>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">FED Web Developer Inter</h4>
+                                <div class="subheading mb-3">VML SA</div>
+                                <p>Creating html mailers, updating css on live projects.</p>
+                            </div>
+                            <div class="flex-shrink-0"><span>Feb 2017 - April 2018</span></div>
+                        </div>
+                    </div>
+                </section>
+                <hr class="m-0" />
+                <!-- Education-->
+                <section class="resume-section" id="education">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Education</h2>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">CodeX</h4>
+                                <div class="subheading mb-3">Agile Web Development</div>
+                                <div>Javascript - Front End and BackEnd DEvelopment</div>
+                                <p>Twelve months intense course</p>
+                            </div>
+                            <div class="flex-shrink-0"><span>August 2006 - May 2010</span></div>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between">
+                            <div class="flex-grow-1">
+                                <h4 class="mb-0">CodeSpace Academy</h4>
+                                <div class="subheading mb-3">Web Development</div>
+                                <p>Six months intense course</p>
+                            </div>
+                            <div class="flex-shrink-0"><span>July 2016 - Dec 2016</span></div>
+                        </div>
+                    </div>
+                </section>
+                <hr class="m-0" />
+                <!-- Skills-->
+                <section class="resume-section" id="skills">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Skills</h2>
+                        <div class="subheading mb-3">Programming Languages & Tools</div>
+                        <ul class="list-inline dev-icons">
+                            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                            <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li> -->
+                            <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
+                            <!-- <li class="list-inline-item"><i class="fab fa-react"></i></li> -->
+                            <!-- <li class="list-inline-item"><i class="fab fa-node-js"></i></li> -->
+                            <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+                            <!-- <li class="list-inline-item"><i class="fab fa-less"></i></li> -->
+                            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+                            <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
+                            <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        </ul>
+                        <div class="subheading mb-3">Workflow</div>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Mobile-First, Responsive Design
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Cross Browser Testing & Debugging
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Cross Functional Teams
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Agile Development & Scrum
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <hr class="m-0" />
+                <!-- Interests-->
+                <section class="resume-section" id="interests">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Interests</h2>
+                        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    </div>
+                </section>
+                <hr class="m-0" />
+                <!-- Awards-->
+                <section class="resume-section" id="awards">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Awards & Certifications</h2>
+                        <ul class="fa-ul mb-0">
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Still loading.................
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Still loading.................
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                1
+                                <sup>st</sup>
+                                Still loading.................
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+          </div>
         
       </div>
 
@@ -122,19 +308,19 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 hvr-shutter-out-vertical">
               <h2>Unit Tesing</h2>
-              <a href="https://amandam2017.github.io/bootcamp-tests/" target="_blank">
+              <a href="https://amandam2017.github.io/dom-intro/" target="_blank">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
               <p>Tested the bootcamp functions using mochaJS, chaiJS and bdd the mocha styles</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 hvr-shutter-out-vertical">
-              <h2>Dom Widgets</h2>
-              <a href="https://amandam2017.github.io/dom-intro/">
+              <h2>Greetings</h2>
+              <a href="https://amandam2017.github.io/greetings/">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
                   alt="Generic placeholder image" width="100%" height="250">
               </a>
-              <p>The page is made up of html and css</p>
+              <p>greetingss should work with both dom and factory function</p>
             </div><!-- /.col-lg-4 -->
           </div>
         </div>
@@ -193,10 +379,16 @@
           <p>Copyright amandamaarman@2021</p>
       </div>
   </div>
-  </div>
   <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/menu.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 
 </body>
 
