--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- Page Content-->
             <div class="container-fluid p-0">
                 <!-- About-->
-                <section class="resume-section" id="about">
+                <section class="resume-section accepted" id="about">
                     <div class="resume-section-content">
                         <h1 class="mb-0">
                             Amanda
@@ -144,7 +144,7 @@
                 </section>
                 <hr class="m-0" />
                 <!-- Experience-->
-                <section class="resume-section" id="experience">
+                <section class="resume-section dark" id="experience">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Experience</h2>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -167,7 +167,7 @@
                 </section>
                 <hr class="m-0" />
                 <!-- Education-->
-                <section class="resume-section" id="education">
+                <section class="resume-section accepted" id="education">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Education</h2>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -191,7 +191,7 @@
                 </section>
                 <hr class="m-0" />
                 <!-- Skills-->
-                <section class="resume-section" id="skills">
+                <section class="resume-section dark" id="skills">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Skills</h2>
                         <div class="subheading mb-3">Programming Languages & Tools</div>
@@ -232,7 +232,7 @@
                 </section>
                 <hr class="m-0" />
                 <!-- Interests-->
-                <section class="resume-section" id="interests">
+                <section class="resume-section accepted" id="interests">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Interests</h2>
                         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
@@ -241,7 +241,7 @@
                 </section>
                 <hr class="m-0" />
                 <!-- Awards-->
-                <section class="resume-section" id="awards">
+                <section class="resume-section dark" id="awards">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Awards & Certifications</h2>
                         <ul class="fa-ul mb-0">
