--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
             </div><!-- /.col-lg-4 -->
           </div>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 hvr-shutter-out-vertical">
+              <h2>Registrations Exercise</h2>
+              <a href="https://amandam2017.github.io/registration_numbers/" target="_blank">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                  alt="Generic placeholder image" width="100%" height="250">
+              </a>
+              <p>Registrations exercise should work with both Dom and Factory</p>
+            </div><!-- /.col-lg-4 -->
+            
+          </div>
+        </div>
       </div>
       </div>
       <div id="bed_proj_content" class="none"><h2>BED PROJECTS</h2>
